<resources>
    <string name="app_name">Tasbih</string>
    <string name="app_version">2.2.0</string>
    <string name="company_name" translatable="false">AspiraSoft</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-6293532072634065~5243770836</string>
    <string name="app_id" translatable="false">5243770836</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-6293532072634065/4510334430</string>

    <string name="title_counters">Tasbih</string>

    <string name="desc_logo">Logo</string>
    <string name="desc_drawer_type">Drawer type</string>

    <string name="placeholder_memo">No description added.</string>

    <string name="label_add">Add</string>x
    <string name="label_add_description">Create Tasbih</string>

    <string name="label_name">Title</string>
    <string name="label_name_description">Name of the Tasbih.</string>

    <string name="label_memo">Description (Optional)</string>
    <string name="label_memo_description">e.g. origins of this Tasbih, its benefits, how many times it should be recited, or other relevant notes, etc.</string>

    <string name="hint_delete">Delete</string>
    <string name="hint_reset">Reset</string>

    <string name="confirmation_prompt">Are you sure?</string>
    <string name="delete_confirmation">Do you really want to delete the counter? Proceed with caution. This action is permanent.</string>
    <string name="reset_confirmation">This action would reset the counter value. Proceed with caution.</string>

    <string name="label_finished" translatable="false">%1$d</string>

    <string name="counter1_name" translatable="false">الحمد لله</string>
    <string name="dua1_ar">الحمد لله</string>
    <string name="dua1_ar_en" translatable="false">Alhamdulilah</string>
    <string name="dua1_en">All the praises and thanks be to Allah</string>
    <string name="duu1_source" translatable="false">()</string>

    <string name="counter2_name" translatable="false">سبحان الله</string>
    <string name="dua2_ar">سبحان الله</string>
    <string name="dua2_ar_en" translatable="false">Subhan Allah</string>
    <string name="dua2_en">Exalted is Allah above what they describe, except the chosen servants of Allah [who do not share in that sin]</string>
    <string name="dua2_source" translatable="false">(Quran, 37:159–160)</string>

    <string name="counter3_name" translatable="false">الله أكبر</string>
    <string name="dua3_ar">الله أكبر</string>
    <string name="dua3_ar_en" translatable="false">Allahu Akbar</string>
    <string name="dua3_en">Allah is the Greatest</string>
    <string name="dua3_source" translatable="false">()</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

</resources>